modules/xerte/parent_templates/Nottingham/models_html5/gapFill.css
/* gapFill.html */
	
	#pageContents #mainPanel.panel {
		overflow:	auto;
	}

	#pageContents #dragDropHolder #mainPanel.panel {
		overflow-x: hidden;
	}
	
	#targetHolder .target {
		display:		inline-block;
		text-align:		center;
		vertical-align:	middle;
		margin:			3px 0 5px 0;
		cursor: pointer;
	}

	#targetHolder .target.correct {
		padding: 0 5px;
	}

	#targetHolder .target.selected {
		border: 2px solid green !important;
	}

	#targetHolder.underline .target.highlight {
		border-bottom: 1px solid black;
		border-top: 1px solid transparent;
		background-image: none;
	}

	#targetHolder.outline .target.highlight {
		border: 1px dashed black;
		background-image: none;
	}

	#targetHolder.outline:not(.noCompress) .target.ui-droppable-disabled,
	#targetHolder.bg:not(.noCompress):not(.gapStyle_false) .target.ui-droppable-disabled {
		padding-left: 5px;
		padding-right: 5px;
	}
	
	#targetHolder input {
		margin:		5px 0;
		text-align:	center;
	}
	
	#targetHolder input[readonly].correct, #targetHolder .target.correct, #targetHolder input[correct] {
		color:			green;
		border-color:	transparent;
	}

	#targetHolder .target.incorrect {
		color:			#EB0000;
		border-color:	transparent;
		font-weight:600;
	}
	
	#targetHolder input.incorrect, #targetHolder input[incorrect] {
		color: 			#EB0000;
		/*font-weight:600;*/
	}
	
	#targetHolder .target.incorrect {
		color:			#EB0000;
		border-color:	transparent;
		font-weight:600;
	}
	
	#targetHolder .target.answerShown, #targetHolder input.answerShown {
		color:			#003399;
		border-color:	transparent;
	}

	#targetHolder .target.answerShown {
		cursor: default;
		padding-left: 5px;
		padding-right: 5px;
	}

	#targetHolder.bg.gapStyle_false .target.answerShown {
		background: none;
	}

	#targetHolder.outline.gapStyle_false .target.answerShown,
	#targetHolder.underline.gapStyle_false .target.answerShown {
		border-color: transparent;
	}
	
	#targetHolder select {
		margin:	5px 0;
	}
	
	#targetHolder select[disabled] {
		color: #EB0000;
		font-weight:600;
	}
	
	#targetHolder select[disabled].correct {
		color:	green;
	}
	
	#targetHolder select[disabled].answerShown {
		/*gap fill: drop down show answers styling*/
		opacity:1.0;
		font-weight:400;
		border: none;
		background:#ffffff;
		cursor: default;
		padding:initial !important;
	}
	
	#labelHolder {
		margin-top:	1em;
		border-top:	1px solid #ccc;
	}
	
	#labelHolder .label {
		display:	inline-block;
		cursor:		pointer;
		padding:	7px;
		margin:		10px;
		border:		2px solid white;
	}
	
	#labelHolder .label.focus {
		border:		2px solid yellow;
	}
	
	#labelHolder .label.selected {
		border:		2px solid green;
	}
	
	#feedbackTxt {
		margin-top:		1em;
		padding-top:	1em;
		border-top:		1px solid #ccc;
		clear:			both;
	}
	
	#feedbackTxt #audioHolder {
		margin-top:	20px;
	}
	
	#btnHolder {
		overflow: auto;
		float: right;
	}
	
	#submitBtn, #showBtn {
		margin-bottom:	10px;
	}
	
	#showBtn {
		margin-right: 1em;
	}


/* change styling of correct and disable answers */
#targetHolder input[readonly].correct,
#targetHolder:not(.underline):not(.outline) .target.correct,
#targetHolder input[correct],
#targetHolder select[disabled].correct {
	color:unset;
	color: green;
	opacity:1.0;
	/*font-weight:400;*/
	/*border-color: unset;
	border-width:2px;
	border-style:outset;
	background:#ffffff;*/
	cursor: default;
	/*padding:initial !important;*/
	caret-color: transparent;
}

#targetHolder .target.correct {
	cursor: default;
}

/* add ticks to correct answers */
#targetHolder input[readonly].judged.correct+span:before,
#targetHolder input[correct].judged+span:before,
#targetHolder .target.correct+span:before,
#targetHolder select[disabled].correct+span:before {
	font-family: FontAwesome;
	content: "\f00c";
	color: green;
	margin-left:1px;
}

/*gap fill: show red crosses when incorrect and in tracking mode*/
#targetHolder select[disabled]+span:before,
#targetHolder .target.incorrect+span:before,
#pageContents input[readonly].judged.incorrect:not(.answerShown)+span:before{
	font-family: FontAwesome;
	content: "\f00d";
	color: red;
	margin-left:1px;
}

/*gap fill: styling of disabled/incorrect responses when in tracking mode*/
#targetHolder select[disabled], #targetHolder .target.incorrect, #targetHolder input[readonly]{
	opacity:1.0;
	/*font-weight:400;*/
	/*border-color: unset;
	border-width:2px;
	border-style:outset;*/
	border: none;
	background:#ffffff;
	cursor: default;
	padding:initial !important;
}

/*gap fill: remove red crosses when show answers selected*/
#targetHolder .target.answerShown+span:before, #targetHolder select[disabled].answerShown+span:before, #targetHolder input.answerShown+span:before {
	content:"";
}

@media (min-width: 768px) {
	#x_mainHolder.x_responsive #labelHolder .label {
		font-size: 2vmin;
	}
}

